k8s/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexvion-canary
  namespace: nexvion-bg
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: nginx
  rules:
    - host: bg.nexvion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexvion-green
                port:
                  number: 80
